manifests/ctf-ui-operator-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ctf-ui-operator
  labels:
    app.kubernetes.io/name: ctf-ui-operator
